--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,6 @@
-baseURL = "http://example.org/"
+baseURL = "https://gnuengineer.com/"
 languageCode = "en-us"
-title = "My New Hugo Site"
-theme = "ananke"
+title = "GNU Engineer Notes"
+theme = "hugo-bootstrap-5"
+[params]
+  subtitle = 'a blog by Jeremy Chandler Van Doren'
